# nu-ansi-term

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: 256_colors.rs  basic_colors.rs  hyperlink.rs  rgb_colors.rs
src/: ansi.rs  debug.rs  difference.rs  display.rs  gradient.rs  lib.rs  rgb.rs  style.rs  windows.rs  write.rs
tests/: style.rs
