[package]
authors = [
    "ogham@bsago.me",
    "Ryan Scheel (Havvy) <ryan.havvy@gmail.com>",
    "Josh Triplett <josh@joshtriplett.org>",
    "The Nushell Project Developers",
]
description = "Library for ANSI terminal colors and styles (bold, underline)"
edition = "2018"
license = "MIT"
name = "nu-ansi-term"
version = "0.46.0"
repository = "https://github.com/nushell/nu-ansi-term"

[lib]
doctest = true

[features]
derive_serde_style = ["serde"]

[dependencies]
serde = { version="1.0.90", features=["derive"], optional=true }

[target.'cfg(windows)'.dependencies.windows]
version = "0.44"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_Security"
]

[dev-dependencies]
doc-comment = "0.3"
regex = "1.1.9"

[dev-dependencies.serde_json]
version = "1.0.39"
